# django

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
lazycaptcha/: __init__.py  apps.py  client.py  conf.py  decorators.py  fields.py  forms.py  middleware.py  widgets.py
lazycaptcha/templatetags/: lazycaptcha.py
tests/: settings.py  test_client.py
