[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazycaptcha-django"
version = "2.0.0"
description = "Django integration for LazyCaptcha — drop-in CAPTCHA protection with form field, widget, middleware, and template tag."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "LazyCaptcha contributors" }
]
keywords = ["django", "captcha", "lazycaptcha", "bot-protection", "form-validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
dependencies = [
    "Django>=4.2",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://lazycaptcha.com"
Source = "https://github.com/yourusername/lazycaptcha-django"
Issues = "https://github.com/yourusername/lazycaptcha-django/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "responses>=0.24",
]

[tool.setuptools.packages.find]
include = ["lazycaptcha*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
